--- a/assets/scss/composition/_cards.scss
+++ b/assets/scss/composition/_cards.scss
@@ -14,6 +14,7 @@ $section-cards-article-card-margin-bottom: 48px;
 	align-items: stretch;
 	display: flex;
 	flex-flow: column wrap;
+	justify-content: center;
 	max-width: $section-cards-max-with;
 	margin: 0 auto;
 	overflow: hidden; // wrap
