--- a/assets/scss/mixins/_aspect-ratio.scss
+++ b/assets/scss/mixins/_aspect-ratio.scss
@@ -1,4 +1,4 @@
-// Example of the flex system for alvy@microsiervos.com
+// Example of the flex system for @microsiervos.com
 //
 // Licensed under GPL v3 2017.
 // github.com/gruncho/aspect-ratio
