header SCSS files edited.

--- a/assets/scss/mixins/_aspect-ratio.scss
+++ b/assets/scss/mixins/_aspect-ratio.scss
@@ -1,7 +1,7 @@
-// Example of the flex system for @microsiervos.com
+// Example of the flex system for github.com/gruncho/aspect-ratio
 //
-// Licensed under GPL v3 2017.
-// github.com/gruncho/aspect-ratio
+// For the full copyright and license information, please view the LICENSE
+// file that was distributed with this source code.
 //
 // @author Alex M. Gorgal <alex@worldx3.com> aka @gruncho
 
