--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -1,6 +1,7 @@
-// Example of the flex system for @microsiervos.com
+// Example of the flex system for @microsiervos.com (2017)
 //
-// Licensed under GPL v3 2017.
+// For the full copyright and license information, please view the LICENSE
+// file that was distributed with this source code.
 //
 // @author Alex M. Gorgal <alex@worldx3.com> aka @gruncho
 
